--- a/14-Proteomics.Rmd
+++ b/14-Proteomics.Rmd
@@ -37,25 +37,39 @@ p_load("ComplexHeatmap")
 p_load("enrichplot")
 p_load("clusterProfiler")
 #NOTE: edgeR loads limma as a dependency
+library(ComplexHeatmap)
+library(RColorBrewer)
+library(limma)
+library(org.Sc.sgd.db)
+
+# choose number clusters
+library(readr)
+library(factoextra)
+library(NbClust)
+
+# corr plots
+
+library(ggpubr)
+library(corrplot)
+library(stringr)
+library(tidyr)
 ```
 
 ## Description
 
 Use limma to identify differential patterns of proteomic and
-transcriptomic changes in response to stress.
+transcriptomic changes in a time series heat shock experiment.
 
 ## Learning Objectives
 
 At the end of this exercise, you should be able to:
 
--   Generate a table of sample metadata.
+-   Identify differentially Abundant proteins with limma
 -   Filter low counts and normalize count data.
--   Utilize the limma package to identify differentially expressed
+-   Utilize the limma package to identify differentially expressed proteins
     \_\_\_\_\_\_\_.
 
 ```{r load-libraries-limma}
-library(limma)
-library(org.Sc.sgd.db)
 # for ease of use, set max number of digits after decimal
 options(digits=3)
 ```
@@ -67,30 +81,19 @@ Github repository using the code below. Just as in previous exercises,
 assign the data to the variable `counts`. You can change the file path
 if you have saved it to your computer in a different location.*
 
-```{r load-fc-limma, error=TRUE}
-# counts <- read.delim('https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/main/data/ethanol_stress/counts/salmon.gene_counts.merged.nonsubsamp.tsv',
-#     sep = "\t",
-#     header = T,
-#     row.names = 1
-#   )
-
-proteome_HS <- read.delim("~/Documents/GitHub/GenomicDataAnalysis_Fa23/data/heat_shock/proteomic_FC/HS_Proteomics_Data.txt",
+```{r load-proteome-raw, error=TRUE}
+proteome_HS <- read.delim("https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/main/data/heat_shock/proteomic_FC/HS_Proteomics_Data.txt",
                           sep="\t",
                           header=T,
                           row.names=1)
-
-
 ```
 
-To find the order of files we need, we can get just the part of the
-column name before the first "." symbol with this command:
 
-```{r identify-sampleOrder-limma}
-str_split_fixed(counts %>% colnames(), "\\.", n = 2)[, 1]
-```
+**Generate Metadata**
+
+Create a dataframe of metadata for each sample by using the column names.
 
 ```{r generate-metadata-limma}
-
 # generate metadata from proteme data
 sample_metadata_proteome <- proteome_HS |>
   colnames() |> # use column names of data
@@ -102,36 +105,43 @@ sample_metadata_proteome <- proteome_HS |>
          Measure = "protein", # denote these values as proteomic
          Time = readr::parse_number(Time) # make time a number
          ) |>
-  mutate(Time=as.factor(Time)) #convert time to a factor
+  mutate(Time=as.factor(Time)) |> #convert time to a factor
   relocate(Sample)
 
-
+# Check our metadata output
+head(sample_metadata_proteome)
 ```
 
-Now, let's create a design matrix with this information
+
+### Design Matrix
+
+Create a design matrix with the generated metadata:
 
 ```{r designMatrix-proteome}
-time <- sample_metadata_proteome$Time
-replicate <- sample_metadata_proteome$Replicate
-design <- model.matrix(~ 0 + time + replicate)
+# notice, we made `time` a factor in the previous code. Needed for this analysis.
+time_proteome <- sample_metadata_proteome$Time
+replicate_proteome <- sample_metadata_proteome$Replicate
 
-design
+# create our design (without intercept)
+# see section 9.2 of limma user guide for details, doesn't change final results.
+design_proteome <- model.matrix(~ 0 + time_proteome + replicate_proteome)
+
+# remove _proteome from the column names
+colnames(design_proteome) <- colnames(design_proteome) %>% str_remove("_proteome")
 ```
 
-Because our values aren't counts, we can't use edgeR to load the values
-in.
+Because our values aren't counts, we can't use edgeR `DGElist` command to load the values
+in. Instead, we will run lmFit directly on the values.
 
 ```{r}
-fit <- lmFit(proteome_HS, design)
-fit$coef
+# generate fit
+fit_proteome <- lmFit(proteome_HS, design_proteome)
 
-fit$genes <- fit$genes[,c("ProbeName","Symbol","EntrezID")]
-
-
-
+# add genes to the fit
+fit_proteome$genes <- fit_proteome$genes[,c("ProbeName","Symbol","EntrezID")]
 
 # generate contrasts we are interested in learning about
-my.contrasts <- makeContrasts(time5 = time5 - time0, 
+my.contrasts_proteome <- makeContrasts(time5 = time5 - time0, 
                      time10 = time10 - time0,
                      time15 = time15 - time0,
                      time30 = time30 - time0,
@@ -140,29 +150,43 @@ my.contrasts <- makeContrasts(time5 = time5 - time0,
                      time90 = time90 - time0,
                      time120 = time120 - time0,
                       time240 = time240 - time0,
-                     levels=design)
+                     levels=design_proteome)
 
 # fit the linear model to these contrasts
-res_all <- contrasts.fit(fit, my.contrasts)
+fit_all_proteome <- contrasts.fit(fit_proteome, 
+                                  my.contrasts_proteome)
 
 # This looks at all of our contrasts in my.contrasts
-res_all <- treat(res_all,
+res_all_proteome <- treat(fit_all_proteome,
                  fc = 1.2,
                  robust = TRUE)
 
-# get top results
-top.table <- topTable(res_all, sort.by = "p", n = Inf)
-head(top.table, 20)
+# save top results to an object
+top.table_proteome <- topTable(res_all_proteome, sort.by = "p", n = Inf)
 
-top.table %>% 
+# see the first few entries
+head(top.table_proteome, 20)
+```
+
+We can open a new window to see all genes
+```{eval=FALSE}
+top.table_proteome %>% 
   tibble() %>% 
   arrange(adj.P.Val) %>%
   mutate(across(where(is.numeric), signif, 3)) %>%
   View()
+```
 
-summary(decideTests(res_all))
+Create a summary output of DE proteins across each time point (compared to time=0)
+```{r}
+summary(decideTests(res_all_proteome))
+```
 
-res_all |>
+You can change the `lfc` parameter in the `treat()` code above, and see how this results summary changes.
+
+If we want a detailed look at how many proteins are up or down DE at each time point, the code below will generate that and open it in a new window
+```{r, eval=FALSE}
+res_all_proteome |>
   decideTests() |> 
   data.frame() |>
   tibble::rownames_to_column("ORF") |>
@@ -172,12 +196,13 @@ res_all |>
   filter(DE_direction != 0) |>
   #group_by(Time) |>
   summarise(n=n(),genes=toString(ORF)) |> View()
-
 ```
 
+Let's plot that information
+
 ```{r}
-plot_summary_bars_proteome <- print(res_all |>
-  decideTests(p.value = 0.05, lfc = 0) %>%
+plot_summary_bars_proteome <- print(res_all_proteome |>
+  decideTests() %>%
   as.data.frame() %>%
   rownames_to_column("gene") %>%
   pivot_longer(-gene, names_to = "contrast", values_to = "DE_direction") %>%
@@ -199,179 +224,84 @@ ggplot(aes(
   geom_text(aes(label = n_genes),
             position = position_dodge(width = .9),
             hjust = "inward") +
-  labs(y = "Number of DE genes") +
+  labs(x= "Time (min)", 
+       y = "Number of DE genes") +
       ggtitle("Summary of protein level changes over time"))
 ```
 
+We see more and more proteins are being DE over time, with more being upregulated than downregulated. But are these the same genes at each time point? We could use a venn diagram to answer this question, but with so many time points that can be hard to see.
+
+### UpSet Plot
+
+Another alternative is to use an UpSetPlot of the overlaps. The code below writes a function named `generage_upset_plot` that does just that. 
 
 ```{r}
 # Visualization inspired by: https://tomsing1.github.io/blog/posts/upset_plots/
+generage_upset_plot <- function(results, title) {
+  # Remove genes not significant in any contrast
+  results_filtered <- results[rowSums(results) != 0, ]
+  
+  # Calculate the intersection between the differentially expressed gene sets
+  m <- ComplexHeatmap::make_comb_mat(abs(results_filtered), mode = "distinct")
+  
+  # Exclude self-intersects
+  m <- m[ComplexHeatmap::comb_degree(m) > 1]
+  
+  # Calculate set and comb sizes
+  ss <- ComplexHeatmap::set_size(m)
+  cs <- ComplexHeatmap::comb_size(m)
+  
+  # Create UpSet plot
+  ht <- UpSet(m, set_order = colnames(m), comb_order = order(comb_degree(m)),
+    top_annotation = HeatmapAnnotation("Distinct diff. genes" = 
+        anno_barplot(cs,ylim = c(0, max(cs) * 1.1),border = FALSE,
+                     gp = gpar(fill = "black"), height = unit(4, "cm")),
+      annotation_name_side = "left", annotation_name_rot = 90),
+    right_annotation = HeatmapAnnotation(which = "row",
+      "Total" = anno_barplot(ss, ylim = c(0, max(ss) * 1.1),
+        border = FALSE, gp = gpar(fill = "black"), width = unit(4, "cm"))),
+    column_title = title)
+  
+  ht = draw(ht)
+  od = column_order(ht)
+  rod = row_order(ht)
+  
+  # Decorate annotations
+  decorate_annotation("Distinct diff. genes", {
+    grid.text(cs[od], x = seq_along(cs), y = unit(cs[od], "native") + 
+              unit(2, "pt"), default.units = "native", 
+              just = c("left", "bottom"), gp = gpar(fontsize = 8, 
+                                                     col = "#404040"),
+              rot = 45)})
+  decorate_annotation("Total", {
+    grid.text(
+      ss[rod],x = unit(ss[rod], "native") + unit(20, "pt"),
+      y = rev(seq_along(ss)), default.units = "native",
+      just = c("right", "bottom"), gp = gpar(fontsize = 8, col = "#404040"))})
+}
+```
 
+
+View Upset Plots:
+
+```{r}
 # save decideTests output
-results <- res_all |>
-  decideTests(p.value = 0.05, lfc = 0)
-# remove genes not signif. in any contrast
-results <- results[rowSums(abs(results)) > 0, ]
+results_proteome <- res_all_proteome |>
+    decideTests()
 
-# calculate the intersection between the differentially expressed gene sets
-m <- ComplexHeatmap::make_comb_mat(abs(results), mode = "distinct")
-# exclude self-intersects (total # of diff. genes will be displayed separately)
-m <- m[ComplexHeatmap::comb_degree(m) > 1]
-(ss <- ComplexHeatmap::set_size(m))
-(cs <- ComplexHeatmap::comb_size(m))
+# select genes that are upregulated
+results_up <- results_proteome[rowSums(results_proteome) > 0, ]
+# select genes that are downregulated
+results_down <- results_proteome[rowSums(results_proteome) < 0, ]
 
-ht <- UpSet(m, 
-      set_order = colnames(m), 
-      comb_order = order(comb_degree(m)),
-      top_annotation = HeatmapAnnotation(
-        "Distinct diff. genes" = anno_barplot(
-          cs, 
-          ylim = c(0, max(cs)*1.1),
-          border = FALSE, 
-          gp = gpar(fill = "black"), 
-          height = unit(4, "cm")
-        ), 
-        annotation_name_side = "left", 
-        annotation_name_rot = 90),
-      right_annotation = HeatmapAnnotation(
-        which = "row",
-        "Total" = anno_barplot(
-          ss, 
-          ylim = c(0, max(ss)*1.1),
-          border = FALSE, 
-          gp = gpar(fill = "black"), 
-          width = unit(4, "cm")
-        )
-      ),
-      column_title = "Intersection between DE proteins (Protein Expression)"
-)
-ht = draw(ht)
-od = column_order(ht)
-rod = row_order(ht)
-decorate_annotation("Distinct diff. genes", {
-  grid.text(cs[od], 
-            x = seq_along(cs), 
-            y = unit(cs[od], "native") + unit(2, "pt"), 
-            default.units = "native", just = c("left", "bottom"), 
-            gp = gpar(fontsize = 8, col = "#404040"), rot = 45)
-})
-decorate_annotation("Total", {
-  grid.text(ss[rod], 
-            x = unit(ss[rod], "native") + unit(20, "pt"), 
-            y = rev(seq_along(ss)), 
-            default.units = "native", just = c("right", "bottom"), 
-            gp = gpar(fontsize = 8, col = "#404040"))
-})
 
-# upregulated
-
-# remove genes not signif. in any contrast
-results_up <- results[rowSums(results) > 0, ]
-
-# calculate the intersection between the differentially expressed gene sets
-m <- ComplexHeatmap::make_comb_mat(abs(results_up), mode = "distinct")
-# exclude self-intersects (total # of diff. genes will be displayed separately)
-m <- m[ComplexHeatmap::comb_degree(m) > 1]
-(ss <- ComplexHeatmap::set_size(m))
-(cs <- ComplexHeatmap::comb_size(m))
-
-ht <- UpSet(m, 
-      set_order = colnames(m), 
-      comb_order = order(comb_degree(m)),
-      top_annotation = HeatmapAnnotation(
-        "Distinct diff. genes" = anno_barplot(
-          cs, 
-          ylim = c(0, max(cs)*1.1),
-          border = FALSE, 
-          gp = gpar(fill = "black"), 
-          height = unit(4, "cm")
-        ), 
-        annotation_name_side = "left", 
-        annotation_name_rot = 90),
-      right_annotation = HeatmapAnnotation(
-        which = "row",
-        "Total" = anno_barplot(
-          ss, 
-          ylim = c(0, max(ss)*1.1),
-          border = FALSE, 
-          gp = gpar(fill = "black"), 
-          width = unit(4, "cm")
-        )
-      ),
-      column_title = "Intersection between UPREGULATED proteins (Protein Expression)"
-)
-ht = draw(ht)
-od = column_order(ht)
-rod = row_order(ht)
-decorate_annotation("Distinct diff. genes", {
-  grid.text(cs[od], 
-            x = seq_along(cs), 
-            y = unit(cs[od], "native") + unit(2, "pt"), 
-            default.units = "native", just = c("left", "bottom"), 
-            gp = gpar(fontsize = 8, col = "#404040"), rot = 45)
-})
-decorate_annotation("Total", {
-  grid.text(ss[rod], 
-            x = unit(ss[rod], "native") + unit(20, "pt"), 
-            y = rev(seq_along(ss)), 
-            default.units = "native", just = c("right", "bottom"), 
-            gp = gpar(fontsize = 8, col = "#404040"))
-})
-
-# downregulated
-
-# remove genes not signif. in any contrast
-results_down <- results[rowSums(results) < 0, ]
-
-# calculate the intersection between the differentially expressed gene sets
-m <- ComplexHeatmap::make_comb_mat(abs(results_down), mode = "distinct")
-# exclude self-intersects (total # of diff. genes will be displayed separately)
-m <- m[ComplexHeatmap::comb_degree(m) > 1]
-(ss <- ComplexHeatmap::set_size(m))
-(cs <- ComplexHeatmap::comb_size(m))
-
-ht <- UpSet(m, 
-      set_order = colnames(m), 
-      comb_order = order(comb_degree(m)),
-      top_annotation = HeatmapAnnotation(
-        "Distinct diff. genes" = anno_barplot(
-          cs, 
-          ylim = c(0, max(cs)*1.1),
-          border = FALSE, 
-          gp = gpar(fill = "black"), 
-          height = unit(4, "cm")
-        ), 
-        annotation_name_side = "left", 
-        annotation_name_rot = 90),
-      right_annotation = HeatmapAnnotation(
-        which = "row",
-        "Total" = anno_barplot(
-          ss, 
-          ylim = c(0, max(ss)*1.1),
-          border = FALSE, 
-          gp = gpar(fill = "black"), 
-          width = unit(4, "cm")
-        )
-      ),
-      column_title = "Intersection between DOWNREGULATED proteins (Protein Expression)"
-)
-ht = draw(ht)
-od = column_order(ht)
-rod = row_order(ht)
-decorate_annotation("Distinct diff. genes", {
-  grid.text(cs[od], 
-            x = seq_along(cs), 
-            y = unit(cs[od], "native") + unit(2, "pt"), 
-            default.units = "native", just = c("left", "bottom"), 
-            gp = gpar(fontsize = 8, col = "#404040"), rot = 45)
-})
-decorate_annotation("Total", {
-  grid.text(ss[rod], 
-            x = unit(ss[rod], "native") + unit(20, "pt"), 
-            y = rev(seq_along(ss)), 
-            default.units = "native", just = c("right", "bottom"), 
-            gp = gpar(fontsize = 8, col = "#404040"))
-})
+# Example Usage:
+generage_upset_plot(results = results_proteome, 
+                    title = "Intersection between DE proteins (Protein Expression)")
+generage_upset_plot(results = results_up, 
+                    title = "Intersection between UPREGULATED proteins (Protein Expression)")
+generage_upset_plot(results = results_down, 
+                    title = "Intersection between DOWNREGULATED proteins (Protein Expression)")
 ```
 
 
@@ -386,7 +316,8 @@ It looks like at 30 minutes we are starting to see a significant number of prote
 Let's pull the names of genes corresponding to proteins that are upregulated at t=30 minutes.
 
 ```{r}
-ID_protein_up_30min <- results |>
+# get protein ID of those DE at 30 minutes when compared to 0 minute.
+ID_protein_up_30min <- results_proteome |>
   data.frame() |>
   dplyr::filter(time30==1) |>
   rownames()
@@ -398,7 +329,7 @@ We'll use `enrichGO` from `clusterProfiler` just as we did in the gene ontology 
 
 ```{r}
 # Run GO enrichment
-go_results <- clusterProfiler::enrichGO(
+go_results_proteome <- clusterProfiler::enrichGO(
   gene = ID_protein_up_30min,
   OrgDb = "org.Sc.sgd.db",
   keyType = "ORF",
@@ -408,13 +339,16 @@ go_results <- clusterProfiler::enrichGO(
   mutate(richFactor = Count / as.numeric(sub("/\\d+", "", BgRatio)))
 
 # take a peak at the results
-head(go_results)
+head(go_results_proteome)
+```
 
+##### Visualize GO enrichments
+```{r}
 # create a table for the html file
-data.frame(go_results) %>% View()
+data.frame(go_results_proteome) %>% View()
 
 # visualize top GO terms
-ggplot(go_results,
+ggplot(go_results_proteome,
        showCategory = 15,
        aes(richFactor, fct_reorder(Description, richFactor))) +
   geom_segment(aes(xend = 0, yend = Description)) +
@@ -434,38 +368,44 @@ ggplot(go_results,
 
 #### KEGG
 
-Run KEGG enrichment on the same gene list.
+Run KEGG enrichment on the same gene list of those proteins who were upregulated at 30 minutes.
 
-```{r enrich-KEGG-chip}
+```{r enrich-KEGG-protein, eval=FALSE}
 # Run our KEGG enrichment
-kegg_results <- clusterProfiler::enrichKEGG(gene = ID_protein_up_30min,
+kegg_results_proteome <- clusterProfiler::enrichKEGG(gene = ID_protein_up_30min,
                            organism = 'sce' #options: https://www.genome.jp/kegg/catalog/org_list.html
                            )
 
 # take a peak at the results
-head(kegg_results)
+head(kegg_results_proteome)
+```
 
+```{r view-KEGG-protein, eval=FALSE}}
 # create a table for the html file
-data.frame(kegg_results) %>% View()
+data.frame(kegg_results_proteome) %>% View()
+```
 
-
-# Remove " - Saccharomyces cerevesiae" from each description entry
-kegg_results@result$Description <- kegg_results@result$Description %>% print() %>% str_replace_all(., fixed(" - Saccharomyces cerevisiae"), "")
-
+```{r view-KEGG-proteomics}
+# Remove " - Saccharomyces cerevesiae" from each description entry for plotting
+kegg_results_proteome@result$Description <- kegg_results_proteome@result$Description %>% print() %>% str_replace_all(., fixed(" - Saccharomyces cerevisiae"), "")
 
 # browseKEGG(kegg_results, 'sce04213')  # longevity
 # browseKEGG(kegg_results, 'sce00500')  # Starch and sucrose metabolism
 
 
-dotplot(kegg_results, showCategory = 10) 
+dotplot(kegg_results_proteome, showCategory = 10) 
 ```
 
 Cool, but that was only at the 30 minutes, do we have to do this for each gene list individually?
 
+### GO terms for each time point
+
 Thankfully not, we can input a list of gene names into `compareCluster` and call `enrichGO` or `enrichKEGG`. We do want to be cautious to not be p-hacking. I'm not necessarily interested in all of the time points. Rather than fishing, there are a few I want to see, so we can just make them all.
 
 ```{r}
-ID_proteins_list <- results %>%
+# Generate a list containing DE genes for each time point, 
+# Here, we split by up vs down regulated
+ID_proteins_list <- results_proteome %>%
   data.frame() %>%
   tibble::rownames_to_column("ORF") %>%
   tidyr::pivot_longer(-ORF,names_to="Time", values_to = "DE_direction") %>%
@@ -473,13 +413,15 @@ ID_proteins_list <- results %>%
          DE_name = case_when(DE_direction == 1 ~ "up",
                              DE_direction == -1 ~ "down",
                              TRUE~NA),
+         # create grouping variable
          group=paste0("DE_",DE_name,"_0",Time, "min")) %>%
-  # modify names to fix order
+  # modify names to pad leading 0's to fix time order
   mutate(group = str_replace(group,"_0120", "_120")) %>%
   mutate(group = str_replace(group,"_0240", "_240")) %>%
   mutate(entrezID=AnnotationDbi::select(org.Sc.sgd.db,keys=ORF,columns="ENTREZID",
       multiVals = "first")$ENTREZID) %>%
   group_by(group) %>%
+  # only get genes that are DE
   filter(DE_direction != 0) %>%
   group_split() %>% # split into many lists
   purrr::set_names(purrr::map_chr(., ~.x$group[1])) %>% # assign names
@@ -488,10 +430,12 @@ ID_proteins_list <- results %>%
 ```
 
 
-Run GO enrichment on all groups at once
+Run GO enrichment on all groups at once with `compareCluster`.
+
+For time, we just look at `ont="BP"`, we could also run this code with "ALL", it just takes much longer so for time we are only looking at "BP".
 ```{r fig.height=18, fig.width=8, dpi=300}
 # Run GO enrichment
-test_enrich <- clusterProfiler::compareCluster(
+GO_enrich_proteome_all <- clusterProfiler::compareCluster(
                                   geneCluster   = ID_proteins_list, 
                                   ont           = "BP",
                                   OrgDb         = org.Sc.sgd.db,
@@ -506,26 +450,24 @@ test_enrich <- clusterProfiler::compareCluster(
   mutate(richFactor = Count / as.numeric(sub("/\\d+", "", BgRatio)))
 
 
-dotplot(test_enrich,
-        # label_format = 10,
+dotplot(GO_enrich_proteome_all,
         showCategory=5
         # if we choose "ALL", we can show them all with facet.
         #facet="ONTOLOGY",
-        # strip_width=10
-        ) +
-  scale_x_discrete(guide = guide_axis(angle = 60))
+        ) + scale_x_discrete(guide = guide_axis(angle = 60))
+```
 
+```{r, eval=FALSE}
+# take a peak at the results
+head(GO_enrich_proteome_all)
+
+# create a table for the html file
+data.frame(GO_enrich_proteome_all) %>% View()
 ```
 
 ```{r fig.height=16, fig.width=12, dpi=600}
-# take a peak at the results
-head(test_enrich)
-
-# create a table for the html file
-data.frame(test_enrich) %>% View()
-
 # visualize top GO terms
-test_enrich %>%
+GO_enrich_proteome_all %>%
   as.data.frame() %>% 
   group_by(Cluster) %>%
   # grab the top 10 GO terms per time point
@@ -550,7 +492,7 @@ test_enrich %>%
       theme_bw()
 
 # get rid of sticks to save space
-test_enrich %>%
+GO_enrich_proteome_all %>%
   as.data.frame() %>% 
   group_by(Cluster) %>%
   slice_min(order_by=p.adjust, n = 10) %>%
@@ -575,45 +517,41 @@ test_enrich %>%
 ```
 
 
-If we wanted to generate a heatmap from these values, we can do that as well. Let's start from our `res_all` object, which contains the estimated log2FC values for each gene in each contrast
+If we wanted to generate a heatmap from these values, we can do that as well. Let's start from our `res_all_proteome` object, which contains the estimated log2FC values for each gene in each contrast
 ```{r}
-library(ComplexHeatmap)
-
-res_all_matrix <- res_all %>%
+res_all_proteome_matrix <- res_all_proteome %>%
   as.matrix()
 ```
+
+
 Using k-means clustering, we can find optimal k
+
 ```{r}
-
-library(readr)
-library(factoextra)
-library(NbClust)
-
 ## Elbow method
-fviz_nbclust(scale(res_all_matrix), kmeans, method = "wss") +
+fviz_nbclust(scale(res_all_proteome_matrix), kmeans, method = "wss") +
     geom_vline(xintercept = 4, linetype = 2)+
   labs(subtitle = "Elbow method")
 
 ## Silhouette method
-fviz_nbclust(scale(res_all_matrix), kmeans, method = "silhouette")+
+fviz_nbclust(scale(res_all_proteome_matrix), kmeans, method = "silhouette")+
   labs(subtitle = "Silhouette method")
 
 ## Gap statistic
-# nboot = 50 to keep the function speedy. 
+# nboot = 5 to keep the function speedy. 
 # recommended value: nboot= 500 for your analysis.
 # Use verbose = FALSE to hide computing progression.
 set.seed(123)
-fviz_nbclust(res_all_matrix, kmeans, nstart = 25,  method = "gap_stat", nboot = 50)+
-  labs(subtitle = "Gap statistic method")
+#fviz_nbclust(res_all_proteome_matrix, kmeans, nstart = 25,  method = "gap_stat", nboot = 5)+
+  #labs(subtitle = "Gap statistic method")
 ```
 
 
 Let's use `k=4`.
 ```{r}
-library(RColorBrewer)
+
 set.seed(123)
 
-heatmap_protein <- res_all_matrix %>%
+heatmap_protein <- res_all_proteome_matrix %>%
   as.data.frame() %>%
   rownames_to_column("ORF") %>%
   # get names of genes different at any time point
@@ -650,12 +588,13 @@ draw_heat_protein
 
 
 ```{r}
-clusterlist = row_order(draw_heat_protein)
+# Get order of genes in the heatmap
+clusterlist <- row_order(draw_heat_protein)
 
-# create empty list to store
+# create empty list to store genes in each cluster
 clusters_gene_list <- list()
 
-# get gene names for each cluster
+# get gene names for each cluster based on row order
 for (cluster in as.character(1:length(clusterlist))) {
   clusters_gene_list[[paste0("Cluster:",cluster)]] <- heatmap_protein@row_names_param$labels[clusterlist[[cluster]]]
 }
@@ -687,7 +626,7 @@ heatmap_GO %>%
 
 Finally, let's get a correlation matrix of all of these different time points. We see time the weakest correlation between the first and final time point, as expected. Furthermore, there appears to be rapid changes occuring at early time points, where later time points 
 ```{r}
-res_all_matrix %>%
+res_all_proteome_matrix %>%
   cor(use="pairwise.complete.obs") %>%
   corrplot::corrplot(method = "square", insig='blank',
          addCoef.col ='white', number.cex = 0.8,
@@ -705,7 +644,7 @@ Let's grab a dataset of the transcriptome for time series response to heat shock
 ### load in the data
 
 ```{r}
-transcriptome_HS <- read.delim("~/Documents/GitHub/GenomicDataAnalysis_Fa23/data/heat_shock/Eng_2010_HS_Arrays.tsv",
+transcriptome_HS <- read.delim("https://github.com/clstacy/GenomicDataAnalysis_Fa23/raw/main/data/heat_shock/Eng_2010_HS_Arrays.tsv",
                           sep="\t",
                           header=T,
                           row.names=1,
@@ -735,7 +674,7 @@ sample_metadata_transcriptome <- transcriptome_HS |>
 
 Now, let's create a design matrix with this information
 
-```{r designMatrix-proteome}
+```{r designMatrix-transcriptome}
 time_transcriptome <- sample_metadata_transcriptome$Time
 replicate_transcriptome <- sample_metadata_transcriptome$Replicate
 design_transcriptome <- model.matrix(~ 0 + time_transcriptome + replicate_transcriptome)
@@ -775,17 +714,19 @@ res_all_transcriptome <- treat(res_all_transcriptome,
                                robust=TRUE)
 
 # get top results
-top.table <- topTreat(res_all_transcriptome, sort.by = "p", n = Inf)
-head(top.table, 20)
+top.table_transcriptome <- topTreat(res_all_transcriptome, sort.by = "p", n = Inf)
+head(top.table_transcriptome, 20)
+```
 
-top.table %>%
+```{r, eval=FALSE}
+# look at the top table gene results
+top.table_transcriptome %>%
   as_tibble(rownames = "ORF") %>%
   arrange(adj.P.Val) %>%
   mutate(across(where(is.numeric), signif, 3)) %>%
   View()
 
-summary(decideTests(res_all_transcriptome))
-
+# look at a detailed summary of the number DE in each time
 res_all_transcriptome |>
   decideTests() |> 
   data.frame() |>
@@ -796,20 +737,24 @@ res_all_transcriptome |>
   filter(DE_direction != 0) |>
   summarise(n=n(),genes=toString(ORF)) |> 
   View()
-
 ```
 
-We could visualize these results in all of the ways we did above, but for brevity, let's just make one plot:
+We can also get the results of the DE counts in each contrast with `summary()` on `decideTests()`
+```{r}
+summary(decideTests(res_all_transcriptome))
+```
+
+We could visualize these results in all of the ways we did above for the protein data, but for brevity, let's just make one plot:
 
 ```{r}
 plot_summary_bars_transcriptome <- print(
   res_all_transcriptome |>
-  decideTests(p.value = 0.05, lfc = 0) %>%
+  decideTests() %>%
   as.data.frame() %>%
   rownames_to_column("gene") %>%
   pivot_longer(-gene, names_to = "contrast", values_to = "DE_direction") %>%
   group_by(contrast) %>%
-  # because there are NA values, we need to drop those now:
+  # because there are NA microarray values, we need to drop those now:
   drop_na() %>%
   summarise(
     upregulated = sum(DE_direction == 1),
@@ -828,14 +773,15 @@ ggplot(aes(
   geom_text(aes(label = n_genes),
             position = position_dodge(width = .9),
             hjust = "inward") +
-  labs(y = "Number of DE genes") +
+  labs(x="Time (min)",
+       y = "Number of DE genes") +
       ggtitle("Summary of gene expression changes over time") )
 ```
 
 Do these results match what you'd expect to see? Maybe this will be easier as a direct comparison. We'll do that in the next section. But first, how do the expression time points compare with each other?
 
 ```{r}
-
+# correlation plot of mRNA across time points
 res_all_transcriptome %>%
   as.matrix() %>%
   cor(use="pairwise.complete.obs") %>%
@@ -846,10 +792,13 @@ res_all_transcriptome %>%
          # add this to make sure title isn't cut off
          mar=c(0,0,1,0))
 ```
+
 Save list of genes that are DE for each time point for gene expression. I want to split genes that are upregulated and downregulated into separate lists.
+
 ```{r}
+# get list of genes DE at each time point, as well as direction of DE
 ID_transcriptome_list <- res_all_transcriptome %>%
-  decideTests(p.value = 0.05, lfc = 1) %>%
+  decideTests() %>%
   data.frame() %>%
   tibble::rownames_to_column("ORF") %>%
   tidyr::pivot_longer(-ORF,names_to="Time", values_to = "DE_direction") %>%
@@ -866,8 +815,10 @@ ID_transcriptome_list <- res_all_transcriptome %>%
   purrr::set_names(purrr::map_chr(., ~.x$group[1])) %>% # assign names
   map(., ~ .x |> pull(all_of("ORF"))) # grab just the gene names
 
+
+# list of the upregulated DE genes in each contrast
 ID_transcriptome_list_up <- res_all_transcriptome %>%
-  decideTests(p.value = 0.05, lfc = 1) %>%
+  decideTests() %>%
   data.frame() %>%
   tibble::rownames_to_column("ORF") %>%
   tidyr::pivot_longer(-ORF,names_to="Time", values_to = "DE_direction") %>%
@@ -884,8 +835,10 @@ ID_transcriptome_list_up <- res_all_transcriptome %>%
   purrr::set_names(purrr::map_chr(., ~.x$group[1])) %>% # assign names
   map(., ~ .x |> pull(all_of("ORF"))) # grab just the gene names
 
+
+# list of the downregulated DE genes in each contrast
 ID_transcriptome_list_down <- res_all_transcriptome %>%
-  decideTests(p.value = 0.05, lfc = 1) %>%
+  decideTests() %>%
   data.frame() %>%
   tibble::rownames_to_column("ORF") %>%
   tidyr::pivot_longer(-ORF,names_to="Time", values_to = "DE_direction") %>%
@@ -908,14 +861,13 @@ ID_transcriptome_list_down <- res_all_transcriptome %>%
 
 Now, let's create a side-by-side DE gene total graph. Here is an easy way to combine graphs we've made. 
 ```{r}
-library(ggpubr)
 ggpubr::ggarrange(plot_summary_bars_transcriptome, plot_summary_bars_proteome,
           ncol=2, nrow=1, common.legend = TRUE, legend="bottom")
 ```
 
 How do these data correlate with each other? Let's find out. To do this, we'll first need to do some data wrangling.
 ```{r}
-res_all %>%
+res_all_proteome %>%
   as.matrix() %>%
   as.data.frame() %>%
   tibble::rownames_to_column("ORF") %>%
@@ -964,9 +916,9 @@ mtext(text = "mRNA (min)", side = 2, line = 0, at = 3.5, las = 0)
 mtext(text = "Protein (min)", side = 3, line = 0, at =5, las = 0 )
 ```
 
-Just upregulated mRNA genes 
+Look at correlations of genes that were **upregulated** at the mRNA level.
 ```{r}
-res_all %>%
+res_all_proteome %>%
   as.matrix() %>%
   as.data.frame() %>%
   tibble::rownames_to_column("ORF") %>%
@@ -1008,9 +960,10 @@ mtext(text = "mRNA (min)", side = 2, line = 0, at = 3.5, las = 0)
 mtext(text = "Protein (min)", side = 3, line = 0, at =5, las = 0 )
 ```
 
-Look at correlations of genes that were downregulated at the mRNA level.
+Look at correlations of genes that were **downregulated** at the mRNA level.
+
 ```{r}
-res_all %>%
+res_all_proteome %>%
   as.matrix() %>%
   as.data.frame() %>%
   tibble::rownames_to_column("ORF") %>%
